@@ -45,7 +45,11 @@ android {
     }
     testOptions {
         unitTests.all {
-            jvmArgs '-XX:+EnableDynamicAgentLoading'
+            jvmArgs(
+                "-XX:+EnableDynamicAgentLoading",
+                "--add-opens", "java.base/java.time=ALL-UNNAMED",
+                "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+            )
         }
     }
 }
